# soul-crystal

./: .gitignore  CRYSTAL_REFERENCE.md  Cargo.toml  LICENSE  README.md
paper/: codex_case_study.md  gemini_case_study.md  topologer_crystal_paper.md
python/: soul_crystal_v1.py  soul_crystal_v2.py
src/: crystal.rs  embedding.rs  emotion.rs  lib.rs  main.rs  persistence.rs
tests/: adversarial.rs  differentiation.rs  emotion_matrix.rs  persistence_test.rs  stability.rs  stress.rs
