[package]
name = "soul-crystal"
version = "0.2.0"
edition = "2024"
description = "Norm-preserving topological reservoir for emotional state — the Soul Crystal"

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
num-complex = { version = "0.4", features = ["serde"] }
rand = "0.9"
rand_distr = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
